tests/NormalTests/paczka1/fuzzy1/68892030.err
Error in line 3: dCqov A990 61,0
Error in line 8: dCqov A692 320,33
Error in line 12: DUmlaA A692 34,8
Error in line 20: jwdlKv A286 6,4
Error in line 30: DUmlaA A990 83,6
Error in line 33: DUmlaA A998 41,2
